ghost-blog/templates/ghost-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  namespace: ghost-blog
  labels:
    app: ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      serviceAccountName: ghost-sa
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "Always"
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: ghost
          image: ghost:5.119.1
          imagePullPolicy: Always
          ports:
            - containerPort: 2368
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: ghost-storage
              mountPath: /var/lib/ghost/content
              readOnly: false
          readinessProbe:
            httpGet:
              path: /
              port: 2368
              httpHeaders:
                - name: Accept
                  value: text/html
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /
              port: 2368
              httpHeaders:
                - name: Accept
                  value: text/html
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5
      volumes:
        - name: ghost-storage
          persistentVolumeClaim:
            claimName: ghost-pvc
